--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
     "next": "15.1.6",
+    "openai": "^4.85.4",
     "react": "^18",
     "react-dom": "^18",
     "react-webcam": "^7.2.0",
