--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,61 @@
-flask==3.0.2
-flask-cors==4.0.0
-uvicorn==0.27.1
-pydantic==2.6.1
-pymongo==4.6.1
-numpy==1.26.3
-scikit-learn==1.4.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+# created-by: conda 24.11.1
+_libgcc_mutex=0.1=main
+_openmp_mutex=5.1=1_gnu
+annotated-types=0.6.0=py313h06a4308_0
+anyio=4.6.2=py313h06a4308_0
+blinker=1.9.0=py313h06a4308_0
+bzip2=1.0.8=h5eee18b_6
+ca-certificates=2024.12.31=h06a4308_0
+cffi=1.17.1=py313h1fdaa30_1
+click=8.1.7=py313h06a4308_0
+cryptography=43.0.3=py313h7825ff9_1
+dnspython=2.4.2=py313h06a4308_0
+expat=2.6.4=h6a678d5_0
+fastapi=0.112.2=py313h06a4308_0
+flask=3.1.0=py313h06a4308_0
+flask_cors=3.0.10=pyhd3eb1b0_0
+h11=0.14.0=py313h06a4308_0
+idna=3.7=py313h06a4308_0
+itsdangerous=2.2.0=py313h06a4308_0
+jinja2=3.1.5=py313h06a4308_0
+joblib=1.4.2=pypi_0
+ld_impl_linux-64=2.40=h12ee557_0
+libffi=3.4.4=h6a678d5_1
+libgcc-ng=11.2.0=h1234567_1
+libgomp=11.2.0=h1234567_1
+libmpdec=4.0.0=h5eee18b_0
+libstdcxx-ng=11.2.0=h1234567_1
+libuuid=1.41.5=h5eee18b_0
+markupsafe=3.0.2=py313h5eee18b_0
+ncurses=6.4=h6a678d5_0
+numpy=2.2.3=pypi_0
+openssl=3.0.15=h5eee18b_0
+pip=25.0=py313h06a4308_0
+pycparser=2.21=pyhd3eb1b0_0
+pydantic=2.10.3=py313h06a4308_0
+pydantic-core=2.27.1=py313h4aa5aa6_0
+pymongo=4.8.0=py313h5eee18b_0
+python=3.13.2=hf623796_100_cp313
+python-dotenv=0.21.0=py313h06a4308_0
+python_abi=3.13=0_cp313
+readline=8.2=h5eee18b_0
+scikit-learn=1.6.1=pypi_0
+scipy=1.15.2=pypi_0
+setuptools=75.8.0=py313h06a4308_0
+six=1.16.0=pyhd3eb1b0_1
+sniffio=1.3.0=py313h06a4308_0
+sqlite=3.45.3=h5eee18b_0
+starlette=0.38.2=py313h06a4308_0
+threadpoolctl=3.5.0=pypi_0
+tk=8.6.14=h39e8969_0
+typing-extensions=4.12.2=py313h06a4308_0
+typing_extensions=4.12.2=py313h06a4308_0
+tzdata=2025a=h04d1e81_0
+uvicorn=0.32.1=py313h06a4308_0
+werkzeug=3.1.3=py313h06a4308_0
+wheel=0.45.1=py313h06a4308_0
+xz=5.6.4=h5eee18b_1
+zlib=1.2.13=h5eee18b_1
